--- a/app/src/main/res/layout/activity_section_b1.xml
+++ b/app/src/main/res/layout/activity_section_b1.xml
@@ -59,7 +59,8 @@
                 android:background="@color/colorPrimary"
                 android:text="@string/kba01"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:visibility="gone"/>
 
             <EditText
                 android:id="@+id/kba01"
@@ -68,6 +69,7 @@
                 android:layout_marginBottom="1dp"
                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/kba01"
+                android:visibility="gone"
                 android:inputType="text" />
 
             <!--kba02-->
@@ -247,7 +249,7 @@
                         android:layout_marginBottom="1dp"
                         android:hint="@string/kba07y"
                         android:inputType="number"
-                        android:maxLength="2" />
+                        android:maxLength="1" />
 
                 </LinearLayout>
             </LinearLayout>
