--- a/app/src/main/res/layout/activity_section_b3_pnc.xml
+++ b/app/src/main/res/layout/activity_section_b3_pnc.xml
@@ -115,8 +115,8 @@
                         android:hint="@string/days"
                         android:inputType="number"
                         android:maxLength="1"
-                        android:text='@{kbca02a.checked ? "" : kbca02day.getText.toString }'
-                        android:visibility='@{kbca02a.checked ? View.GONE : View.VISIBLE}' />
+                        android:text='@{kbca02a.checked ? kbca02day.getText.toString : ""}'
+                        android:visibility='@{kbca02a.checked ? View.VISIBLE : View.GONE}' />
 
                     <RadioButton
                         android:id="@+id/kbca02b"
@@ -132,8 +132,8 @@
                         android:hint="@string/weeks"
                         android:inputType="number"
                         android:maxLength="1"
-                        android:text='@{kbca02b.checked ? "": kbca02week.getText.toString}'
-                        android:visibility='@{kbca02b.checked ? View.GONE : View.VISIBLE}' />
+                        android:text='@{kbca02b.checked ? kbca02week.getText.toString : ""}'
+                        android:visibility='@{kbca02b.checked ? View.VISIBLE : View.GONE}' />
 
                     <RadioButton
                         android:id="@+id/kbca0298"
@@ -163,7 +163,7 @@
                         android:id="@+id/kbca03a"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/days" />
+                        android:text="@string/kbca03a" />
 
                     <EditText
                         android:id="@+id/kbca03times"
@@ -174,8 +174,8 @@
                         android:hint="@string/kbca03a"
                         android:inputType="number"
                         android:maxLength="2"
-                        android:text='@{kbca03a.checked ? "" : kbca03times.getText.toString}'
-                        android:visibility='@{kbca03a.checked ? View.GONE : View.VISIBLE}' />
+                        android:text='@{kbca03a.checked ?kbca03times.getText.toString : ""}'
+                        android:visibility='@{kbca03a.checked ? View.VISIBLE : View.GONE}' />
                     <RadioButton
                         android:id="@+id/kbca0398"
                         android:layout_width="match_parent"
@@ -407,35 +407,52 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@android:color/white" />
 
-                <EditText
-                    android:id="@+id/kbcb02day"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:digits="0123456789"
-                    android:hint="@string/days"
-                    android:inputType="number"
-                    android:maxLength="1"
-                    android:text='@{kbcb0298.checked ? "": kbcb02day.getText.toString }'
-                    android:visibility='@{kbcb0298.checked ? View.GONE : View.VISIBLE}' />
 
-                <EditText
-                    android:id="@+id/kbcb02week"
+                <RadioGroup
+                    android:id="@+id/kbcb02"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:digits="0123456789"
-                    android:hint="@string/weeks"
-                    android:inputType="number"
-                    android:maxLength="1"
-                    android:text='@{kbcb0298.checked ? "" : kbcb02week.getText.toString}'
-                    android:visibility='@{kbcb0298.checked ? View.GONE : View.VISIBLE}' />
+                    android:layout_height="wrap_content">
 
-                <CheckBox
-                    android:id="@+id/kbcb0298"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/dkndrem" />
+                    <RadioButton
+                        android:id="@+id/kbcb02a"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/days" />
+
+                    <EditText
+                        android:id="@+id/kbcb02day"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="1dp"
+                        android:hint="@string/days"
+                        android:inputType="number"
+                        android:maxLength="1"
+                        android:text='@{kbcb02a.checked ? kbca02day.getText.toString : ""}'
+                        android:visibility='@{kbcb02a.checked ? View.VISIBLE : View.GONE}' />
+
+                    <RadioButton
+                        android:id="@+id/kbcb02b"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/weeks" />
+
+                    <EditText
+                        android:id="@+id/kbcb02week"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="1dp"
+                        android:hint="@string/weeks"
+                        android:inputType="number"
+                        android:maxLength="1"
+                        android:text='@{kbcb02b.checked ? kbcb02week.getText.toString : ""}'
+                        android:visibility='@{kbcb02b.checked ? View.VISIBLE : View.GONE}' />
+
+                    <RadioButton
+                        android:id="@+id/kbcb0298"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/dkndrem" />
+                </RadioGroup>
 
 
                 <!--kbcb03-->
@@ -449,24 +466,34 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@android:color/white" />
 
-                <EditText
+                <RadioGroup
                     android:id="@+id/kbcb03"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:digits="0123456789"
-                    android:hint="@string/kbcb03times"
-                    android:inputType="number"
-                    android:maxLength="2"
-                    android:text='@{kbcb0398.checked ? "" : kbcb03.getText.toString}'
-                    android:visibility='@{kbcb0398.checked ? View.GONE : View.VISIBLE}' />
+                    android:layout_height="wrap_content">
 
-                <CheckBox
-                    android:id="@+id/kbcb0398"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="1dp"
-                    android:text="@string/drem" />
+                    <RadioButton
+                        android:id="@+id/kbcb03a"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/kbcb03times" />
+
+                    <EditText
+                        android:id="@+id/kbcb03times"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:digits="0123456789"
+                        android:hint="@string/kbcb03times"
+                        android:inputType="number"
+                        android:maxLength="1"
+                        android:text='@{kbcb03a.checked ?kbcb03times.getText.toString : ""}'
+                        android:visibility='@{kbcb03a.checked ? View.VISIBLE : View.GONE}' />
+                    <RadioButton
+                        android:id="@+id/kbcb0398"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/drem" />
+                </RadioGroup>
 
                 <!--kbcb04-->
                 <TextView
@@ -625,7 +652,6 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
                         android:background="@color/pink_100"
                         android:text="@string/kbcb05sub"
                         android:textAppearance="?android:attr/textAppearanceMedium"
