--- a/app/src/main/res/layout/activity_section_b4_5.xml
+++ b/app/src/main/res/layout/activity_section_b4_5.xml
@@ -208,7 +208,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
-                        android:text="@string/dkn" />
+                        android:text="@string/drem" />
 
                     <CheckBox
                         android:id="@+id/kbde0296"
@@ -445,7 +445,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="1dp"
-                        android:text="@string/dkn" />
+                        android:text="@string/drem" />
 
                     <RadioButton
                         android:id="@+id/kbde0596"
