fixed all changes send by amjad bhai as of today

--- a/app/src/main/res/layout/activity_section_a3.xml
+++ b/app/src/main/res/layout/activity_section_a3.xml
@@ -2230,6 +2230,17 @@
                 android:inputType="textCapWords"
                 android:maxLength="80" />
 
+            <EditText
+                android:id="@+id/kac2496"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
+                android:digits="0123456789"
+                android:visibility="gone"
+                android:hint="@string/num"
+                android:inputType="number"
+                android:maxLength="2" />
+
 
             <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
             <LinearLayout
