--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -30,6 +30,7 @@
                 android:elevation="2dp"
                 android:padding="16dp"
                 android:text="@string/btnSync"
+                android:textColor="@color/white"
                 android:textStyle="bold" />
 
             <android.support.v7.widget.RecyclerView
@@ -62,6 +63,7 @@
                 android:background="@color/colorPrimary"
                 android:elevation="2dp"
                 android:padding="16dp"
+                android:textColor="@color/white"
                 android:text="@string/btnUpload"
                 android:textStyle="bold" />
 
